--- a/751_800.md
+++ b/751_800.md
@@ -25,7 +25,7 @@ C.  Attach the AdministratorAccess identity-based policy to the IAM user group. 
 -   [ ] `AdministratorAccess` is a predefined policy that provides full access to AWS services and resources.
 -   [ ] Attaching this policy to an IAM user group and adding the employees' IAM users to the group is the correct way to give those users full access.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and D. Resource-based policies are attached to AWS resources (like S3 buckets), not IAM user groups.
 -   [ ] B. `SystemAdministrator` is not a standard AWS predefined policy name.
@@ -63,7 +63,7 @@ D.  Use Amazon Simple Queue Service (Amazon SQS) FIFO queues as the messaging co
 
 -   [ ] SQS FIFO queues provide exactly-once delivery, ensuring that messages are processed only once and in the order they are sent.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Amazon EC2 instances require significant infrastructure management.
 -   [ ] C. Amazon SNS is a publish/subscribe service that does not guarantee exactly-once delivery.
@@ -98,7 +98,7 @@ A.  Deploy AWS Transfer for SFTP and an Amazon Elastic File System (Amazon EFS) 
 -   [ ] Amazon EFS provides scalable and shared file storage.
 -   [ ] An Auto Scaling group with a scheduled scaling policy ensures high availability and resilience by automatically managing EC2 instances based on the schedule.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B and C. Deploying and managing an EC2 instance with a Linux and SFTP service involves more operational effort than using AWS Transfer for SFTP. Using an Auto Scaling group with the minimum and desired instances set to 1 does not provide high availability.
 -   [ ] D. Modifying the application to pull files from Amazon S3 adds complexity. While S3 is scalable, it is object storage, not a file system, making EFS a better fit for applications expecting a file system interface.
@@ -132,7 +132,7 @@ B.  Put the EC2 instances behind Application Load Balancers (ALBs) in each Regio
 -   [ ] AWS WAF provides protection against web exploits and can be integrated with ALBs.
 -   [ ] AWS Global Accelerator improves global application performance by using static IP addresses and routing traffic through the AWS global network.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and C. Network Load Balancers (NLBs) are designed for TCP and UDP traffic, not HTTP. While Global Accelerator can work with NLBs, WAF cannot be directly deployed on NLBs.
 -   [ ] D. While CloudFront can improve performance, it is primarily a CDN and does not provide static IP addresses for the application endpoints. WAF is better placed at the ALB for direct application protection.
@@ -163,7 +163,7 @@ B.  Use Amazon RDS Proxy in front of the Aurora database.
 -   [ ] Amazon RDS Proxy manages database connections, reducing the number of open connections to the database.
 -   [ ] It can also improve failover times by maintaining connections during failover events.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Switching to Amazon RDS with Multi-AZ does not address the connection management issue or directly improve failover time in the same way as RDS Proxy.
 -   [ ] C. Switching to Amazon DynamoDB is a NoSQL database service and is not suitable for replacing a MySQL database. DAX is a cache for DynamoDB, not RDS.
@@ -196,7 +196,7 @@ A.  Create an Object Lambda Access Point. Create an AWS Lambda function that red
 -   [ ] By creating a Lambda function to redact PII and accessing it through an Object Lambda Access Point, the original data remains unchanged, and the external provider only receives redacted data.
 -   [ ] This solution scales well and has minimal operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. A batch process on an EC2 instance requires managing the instance and the batch process, increasing operational overhead. It also involves creating and managing a separate S3 bucket for redacted data.
 -   [ ] C. A web application on an EC2 instance involves significant operational overhead for managing the instance, the application, and access control.
@@ -228,7 +228,7 @@ C.  Create an Amazon CloudWatch alarm to recover the EC2 instance in case of fai
 -   [ ] A CloudWatch alarm can monitor the EC2 instance and trigger an automated recovery action if the instance becomes unhealthy.
 -   [ ] This helps to improve recovery time.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Termination protection prevents accidental termination but does not help with recovery from failures.
 -   [ ] B. Configuring for Multi-AZ deployment typically involves running multiple instances, which is not allowed in this scenario.
@@ -264,7 +264,7 @@ A.  Use Amazon Elastic Container Service (Amazon ECS). Configure Amazon ECS Serv
 -   [ ] Spreading tasks across Availability Zones ensures high availability.
 -   [ ] Minimal changes are required to the application.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Amazon EKS requires more operational overhead for managing the Kubernetes control plane.
 -   [ ] C. Using EC2 Reserved Instances and Auto Scaling groups involves managing EC2 instances, which adds operational overhead compared to ECS.
@@ -300,7 +300,7 @@ B.  Store newer movie video files in S3 Standard. Store older movie video files 
 -   [ ] S3 Standard-IA offers lower storage costs for infrequently accessed data (older movies) with a retrieval time within minutes, meeting the 5-minute requirement.
 -   [ ] Standard retrieval in S3 Standard-IA is cost-effective for less frequent access.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using S3 Lifecycle policies to move data based on demand might not meet the 5-minute retrieval requirement, as the movement process can take time.
 -   [ ] C. S3 Glacier Flexible Retrieval has retrieval times that can exceed 5 minutes unless expedited retrieval is used, which is more expensive. S3 Intelligent-Tiering is good for unknown access patterns but not optimized for known access patterns.
@@ -333,7 +333,7 @@ C.  Create an Amazon Elastic Container Service (Amazon ECS) cluster that uses th
 -   [ ] Amazon EFS provides scalable file storage that can be used for temporary files.
 -   [ ] This combination meets the requirements for serverless infrastructure and sufficient temporary storage with minimal operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and B. AWS Lambda does not support mounting S3 volumes or EBS volumes in the way that is required for a container to use 50 GB of temporary storage. Lambda also has limitations on ephemeral storage.
 -   [ ] D. Amazon ECS with EC2 launch type requires managing EC2 instances, which increases operational overhead and is not serverless.
@@ -369,7 +369,7 @@ D.  Develop an on-premises custom identity broker application or process that us
 -   [ ] AWS STS allows you to request temporary security credentials for users authenticated via a custom identity broker.
 -   [ ] This approach enables integration with non-SAML compatible LDAP directories.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS IAM Identity Center (successor to AWS Single Sign-On) primarily uses SAML for identity federation and does not directly integrate with LDAP in the way described.
 -   [ ] B. IAM policies define permissions, not authentication mechanisms. They do not integrate LDAP.
@@ -401,7 +401,7 @@ C.  Create a retention rule in Recycle Bin.
 -   [ ] The Recycle Bin for AMIs allows you to recover accidentally deleted AMIs.
 -   [ ] It provides a simple and efficient way to restore AMIs with minimal operational overhead.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating and managing EBS snapshots in a separate account adds complexity and operational overhead.
 -   [ ] B. Copying AMIs to another account periodically is a manual process that increases overhead and may not be as quick as using the Recycle Bin.
@@ -433,7 +433,7 @@ B.  Order multiple AWS Snowball devices to ship the data to AWS.
 -   [ ] AWS Snowball devices are designed for transferring large amounts of data into and out of AWS.
 -   [ ] Using multiple Snowball devices in parallel can help meet the migration deadline within the given bandwidth constraints.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Snowmobile is designed for petabyte-scale data transfers and might be overkill and less cost-effective for 150 TB.
 -   [ ] C. S3 Transfer Acceleration improves transfer speeds over the internet but is limited by the available bandwidth and may not be sufficient for 150 TB within a month.
@@ -468,7 +468,7 @@ B.  Migrate the web tier to Amazon EC2 instances in public subnets. Migrate the 
 -   [ ] Placing the web tier in public subnets and the application and database tiers in private subnets follows security best practices.
 -   [ ] Amazon Aurora MySQL provides point-in-time recovery, meeting the database requirement.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Migrating the web and application tiers to private subnets might require changes to how users access the web tier.
 -   [ ] C. Using Amazon RDS for MySQL does not provide the same performance and scalability benefits as Aurora.
@@ -500,7 +500,7 @@ C.  Create an SQS access policy that provides the other company access to the SQ
 -   [ ] SQS access policies control access to the queue itself and allow you to grant permissions to other AWS accounts.
 -   [ ] This enables the other company to access the queue without needing to manage IAM permissions in the development team's account.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Instance profiles are for EC2 instances to assume IAM roles, not for granting queue access to other accounts.
 -   [ ] B. IAM policies are attached to IAM users, groups, or roles within the same account, not for cross-account queue access.
@@ -534,7 +534,7 @@ D.  Attach the AmazonSSMManagedInstanceCore IAM policy to an IAM role that is as
 -   [ ] AWS Systems Manager Session Manager provides secure and auditable instance management without needing to open inbound ports.
 -   [ ] It is cost-effective and works for both remote and corporate access.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating VPN connections and granting IAM permissions for VPN creation is complex and not cost-effective.
 -   [ ] B. Setting up and managing Site-to-Site VPN connections and requiring developers to set up additional VPNs is operationally heavy and costly.
@@ -566,7 +566,7 @@ C.  Deploy an AWS Storage Gateway volume gateway with cached volumes with an Ama
 -   [ ] Storage Gateway with cached volumes allows you to store the entire dataset in S3 while keeping frequently accessed subsets cached on premises for low-latency access.
 -   [ ] This meets the requirement for immediate availability of a subset of data while reducing on-premises storage costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Migrating data to Amazon S3 with AWS DataSync does not provide low-latency access to a subset of the data.
 -   [ ] B. A file gateway does not provide the block storage interface required for applications that need low-latency access to data subsets.
@@ -598,7 +598,7 @@ A.  Configure point-in-time recovery for the table.
 -   [ ] DynamoDB point-in-time recovery (PITR) provides automatic backups and allows you to restore the table to any point in time within the specified recovery window (up to the last 35 days).
 -   [ ] It is the simplest and most efficient way to meet the requirements.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS Backup is a good solution but involves more configuration and management than PITR for this specific requirement.
 -   [ ] C. Using a Lambda function to create on-demand backups adds complexity and operational overhead.
@@ -631,7 +631,7 @@ B.  Configure an object-created event notification within the S3 bucket to invok
 -   [ ] S3 event notifications can trigger a Lambda function immediately after a file is uploaded.
 -   [ ] Lambda is cost-effective for processing small, short-lived tasks and can scale automatically.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS CloudTrail is for auditing API calls, not for real-time processing. AWS AppSync is for GraphQL APIs, not file processing.
 -   [ ] C. Amazon Kinesis Data Streams is designed for real-time streaming data, which is overkill for simple file uploads and processing.
@@ -663,7 +663,7 @@ C.  Use Compute Savings Plans for the production instances. Use On-Demand Instan
 -   [ ] Compute Savings Plans provide cost savings for consistent EC2 and Lambda usage, which applies to the production instances.
 -   [ ] On-Demand Instances are suitable for the nonproduction instances, and shutting them down when not in use minimizes costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Dedicated Hosts are expensive and not cost-effective for nonproduction instances used only during business hours.
 -   [ ] B. Reserved Instances require a commitment for the entire term, even when instances are not in use, making them less cost-effective for nonproduction.
@@ -698,7 +698,7 @@ C.  Use the AWS Schema Conversion Tool (AWS SCT) to convert the Oracle schema to
 -   [ ] AWS SCT helps convert the database schema from Oracle to Aurora PostgreSQL.
 -   [ ] AWS DMS can migrate the existing data and also replicate ongoing changes, ensuring data consistency.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using only a full-load migration task does not capture changes that occur during the migration.
 -   [ ] B and D. AWS DataSync and Snowball are for file transfer, not database migration. Importing from S3 using the `aws_s3` extension does not capture ongoing changes.
@@ -736,7 +736,7 @@ A and B are correct because:
 -   [ ] Fargate removes the need to manage the underlying infrastructure (EC2 instances), thus reducing operational overhead.
 -   [ ] Both ECS and EKS with Fargate can automatically scale containerized applications based on demand.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] C. Provisioning an Amazon API Gateway API and connecting it to AWS Lambda to run containers is not a direct or efficient way to manage and scale general-purpose containerized applications. API Gateway is designed for managing APIs, and Lambda is for event-driven functions, not long-running container workloads.
 -   [ ] D and E. Using Amazon EC2 worker nodes with ECS or EKS requires managing the EC2 instances, which contradicts the requirement to minimize operational overhead. While these solutions can scale, they involve more management than using Fargate.
@@ -767,7 +767,7 @@ Why this is the correct answer:
 -   [ ] Using a launch template with a preconfigured AMI enables quick and consistent provisioning of new EC2 instances.
 -   [ ] This approach optimizes costs by only using the necessary resources at any given time, scaling out during high demand and scaling in when demand decreases.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Keeping instances stopped and starting them when needed can introduce latency and is less efficient than dynamically scaling. It also doesn't fully utilize Auto Scaling's capabilities.
 -   [ ] B. Setting a fixed minimum size for the Auto Scaling group, large enough to handle peak traffic, is not cost-effective. Resources are wasted during periods of low traffic.
@@ -800,7 +800,7 @@ Why this is the correct answer:
 -   [ ] Config can directly integrate with Amazon SNS to provide notifications, automating the alerting process.
 -   [ ] This approach minimizes operational overhead as it uses existing AWS services for compliance checking and notifications, rather than requiring custom code or complex setups.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Writing a Lambda function requires custom code and ongoing maintenance, increasing operational overhead.
 -   [ ] C. Creating IAM roles with broad permissions is a security risk and doesn't directly address the compliance requirement. Monitoring role assumption is less effective than directly checking security group rules.
@@ -831,7 +831,7 @@ Why this is the correct answer:
 -   [ ] It provides automatic service discovery, handles HTTPS communication, and manages connectivity across different VPCs and accounts.
 -   [ ] This reduces the administrative overhead of setting up and managing complex networking configurations.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using an inspection VPC with a Network Firewall and transit gateway adds significant complexity and overhead for managing firewall rules and routing.
 -   [ ] C. Using NLBs and PrivateLink requires more manual configuration of load balancers, endpoint services, and endpoints, increasing administrative overhead.
@@ -862,7 +862,7 @@ Why this is the correct answer:
 -   [ ] Redis supports complex data structures and operations, making it suitable for caching game metadata.
 -   [ ] ElastiCache also offers capabilities like snapshots and replication for data durability and availability.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Migrating to Amazon Aurora with Aurora Replicas might improve read scalability, but it's still a database and won't provide the sub-millisecond latency needed for very fast metadata retrieval.
 -   [ ] B. Migrating to Amazon DynamoDB with global tables is a NoSQL solution that can provide scalability and replication, but it may not be the best fit for complex metadata queries and might not offer the same performance as an in-memory cache for this use case.
@@ -902,7 +902,7 @@ C.  Update the key policy to allow the development team's OU to use the AWS KMS 
 
 -   [ ] KMS keys are used to encrypt the snapshots. The development OU needs permission to use these keys to launch instances from the AMIs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Adding the Organizations root ARN is too broad and may not be necessary.
 -   [ ] D. Adding individual account ARNs is less efficient than using the OU ARN.
@@ -936,7 +936,7 @@ B.  Use multiple AWS Snowball Edge storage-optimized devices to store and transf
 -   [ ] AWS Snowball Edge devices are designed for transferring large datasets.
 -   [ ] Using multiple devices in parallel can meet the 4-week deadline and is more cost-effective than other options.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Establishing Direct Connect connections to 80 offices is expensive and time-consuming.
 -   [ ] C. AWS Snowmobile is designed for exabyte-scale transfers and is not cost-effective for 80 PB (80 offices x 1 PB).
@@ -968,7 +968,7 @@ B.  Create a resource policy for the EFS file system that denies the elasticfile
 -   [ ] EFS resource policies control access to the EFS file system itself.
 -   [ ] By denying the `elasticfilesystem:ClientWrite` action to the IAM roles used by the EC2 instances, you prevent those instances from writing to the file system.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Mounting the EFS file system in read-only mode is a valid approach but is managed at the instance level, not centrally with IAM.
 -   [ ] C. Identity policies are attached to IAM entities (users, groups, roles), not EFS file systems.
@@ -1001,7 +1001,7 @@ A.  Create an IAM role in the company's account to delegate access to the vendor
 -   [ ] The company's account creates a role that the vendor's IAM role can assume, granting temporary permissions.
 -   [ ] This follows security best practices by using temporary credentials and avoiding long-term access keys.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Creating an IAM user with a password shares long-term credentials, which is a security risk.
 -   [ ] C. Adding a user from the vendor's account to a group in the company's account is less secure and harder to manage.
@@ -1035,7 +1035,7 @@ Why this is the correct answer:
 -   [ ] AWS Budgets allows you to set custom budgets and configure alerts when spending thresholds are met.
 -   [ ] Combining tags with Budgets provides both cost accountability and proactive notifications.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS Cost Explorer forecasts are for predicting future costs, not for assigning costs to owners. AWS Cost Anomaly Detection alerts on unusual spending patterns, not on predefined budget thresholds.
 -   [ ] C. While tags are correct, AWS Trusted Advisor provides advice on cost optimization, security, etc., but it does not have the budget alert capabilities of AWS Budgets.
@@ -1068,7 +1068,7 @@ Why this is the correct answer:
 -   [ ] Restricting the ALB's security group to the company's CIDR block ensures access only from the office.
 -   [ ] The Site-to-Site VPN provides the necessary connectivity between the office and the VPC.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Public subnets and allowing access from 0.0.0.0/0 expose the application to the internet, which is insecure.
 -   [ ] C. NAT gateways in private subnets are incorrect, as NAT gateways need to be in public subnets to route to the internet. The security group configuration is also incorrect.
@@ -1099,7 +1099,7 @@ Why this is the correct answer:
 -   [ ] It is designed for applications that require a transparent and auditable history of data changes, such as accounting systems.
 -   [ ] QLDB minimizes operational overhead as it is a managed service.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Amazon Redshift is a data warehouse service, optimized for analytics, not for maintaining immutable transaction logs.
 -   [ ] B. Amazon Neptune is a graph database service, designed for applications with highly connected data, not for ledger-style transaction tracking.
@@ -1130,7 +1130,7 @@ Why this is the correct answer:
 -   [ ] AWS Step Functions allows you to orchestrate multiple AWS services, including Glue DataBrew jobs, and handle parallel execution, job dependencies, error handling, retries, and state management.
 -   [ ] This combination provides a managed, low-overhead solution for complex data preparation workflows.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using Lambda functions for data processing requires writing and managing code for each job, including error handling and retries. Scheduling Lambda functions does not provide built-in workflow orchestration.
 -   [ ] B. Amazon Athena is a query service for analyzing data in S3 using SQL. It does not provide data preparation capabilities or built-in workflow orchestration. EventBridge Scheduler can trigger Athena queries but does not manage job dependencies or error handling.
@@ -1161,7 +1161,7 @@ Why this is the correct answer:
 -   [ ] This eliminates the possibility of processing duplicate payments, which is critical for a payment processing application.
 -   [ ] Using Lambda functions to send and process messages provides a scalable and serverless architecture.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using S3 for message queuing is inefficient and does not guarantee message ordering or exactly-once processing. S3 event notifications are not designed for reliable message queuing.
 -   [ ] B. Standard SQS queues do not guarantee message ordering or exactly-once processing, which can lead to duplicate payment processing.
@@ -1192,7 +1192,7 @@ Why this is the correct answer:
 -   [ ] AWS Application Discovery Service collects configuration and usage data from on-premises servers to help plan the migration.
 -   [ ] This combination provides the necessary tools for migration planning.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Systems Manager is primarily for managing AWS resources, not for discovery of on-premises infrastructure for migration planning.
 -   [ ] C. AWS Schema Conversion Tool (AWS SCT) is used for database schema conversion, not for general server and workload discovery. AWS Trusted Advisor provides advice on best practices, not migration data collection.
@@ -1224,7 +1224,7 @@ Why this is the correct answer:
 -   [ ] Control Tower helps enforce compliance with best practices, including FSBP, with minimal overhead.
 -   [ ] Deploying in the management account allows for centralized control and auditing.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Deploying Control Tower in a member account is not the recommended practice for centralized management.
 -   [ ] C and D. AWS Managed Services (AMS) is a more comprehensive operational service and is more complex and costly than using Control Tower and Security Hub for this specific requirement. GuardDuty is for threat detection, not compliance with FSBP.
@@ -1254,7 +1254,7 @@ Why this is the correct answer:
 -   [ ] Amazon Athena allows you to query data directly in S3 using SQL, without the need to load it into a database.
 -   [ ] This is the most cost-effective solution because you only pay for the queries you run and the storage in S3.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Creating an Aurora database and migrating the data is expensive and unnecessary for occasional analysis. It involves costs for the database instance, storage, and DMS.
 -   [ ] B. Creating a Redshift cluster is also expensive, as you pay for the cluster even when not actively querying. Redshift is optimized for complex analytics, not occasional queries.
@@ -1284,7 +1284,7 @@ Why this is the correct answer:
 -   [ ] AWS Control Tower proactive controls prevent the deployment of non-compliant resources, enforcing compliance from the start.
 -   [ ] This is the most effective way to ensure that CloudFormation stacks adhere to the company's security policies.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. AWS Control Tower detective controls only detect non-compliant resources after they have been deployed, not preventing their creation.
 -   [ ] C. AWS Config can detect non-compliance, but automating deletion with Systems Manager is more complex than using Control Tower's proactive controls. It also doesn't prevent the initial deployment.
@@ -1316,7 +1316,7 @@ Why these are the correct answers:
 -   [ ] Auto Scaling provides scalability by automatically adjusting the number of EC2 instances based on traffic. Using multiple Availability Zones ensures high availability by distributing instances across different data centers.
 -   [ ] An Application Load Balancer distributes incoming traffic across multiple EC2 instances, improving performance and availability.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A and D. Replacing the instance with a larger one (either compute or memory optimized) provides vertical scaling, which has limits. It does not provide high availability and is not as flexible as Auto Scaling.
 -   [ ] C. A NAT gateway is used for instances in private subnets to access the internet, not for handling web requests. It does not provide scalability or high availability for the web application.
@@ -1348,7 +1348,7 @@ Why this is the correct answer:
 -   [ ] Lambda provides built-in support for KMS encryption, ensuring that environment variables are encrypted at rest and decrypted when the Lambda function is invoked.
 -   [ ] This prevents developers from seeing the plaintext values.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Deploying code to EC2 instances does not inherently solve the problem of securely managing environment variables and introduces more operational overhead.
 -   [ ] B. Using AWS CloudHSM for Lambda environment variables is overly complex and expensive for this use case. CloudHSM is designed for dedicated hardware security modules, not for simple environment variable encryption.
@@ -1379,7 +1379,7 @@ Why this is the correct answer:
 -   [ ] API Gateway integrates directly with Cognito authorizers, simplifying the authentication process for APIs.
 -   [ ] This combination offers a scalable and managed solution for authentication and API management.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Cognito identity pools are used for granting access to AWS resources, not for authenticating users against an API. HTTP APIs are a simpler, lower-cost alternative to REST APIs but do not change the authentication approach.
 -   [ ] C. Using a Lambda function for authentication adds complexity and operational overhead, as you need to manage the function's scalability, availability, and security.
@@ -1411,7 +1411,7 @@ Why this is the correct answer:
 -   [ ] Amazon SNS provides a simple way to send notifications, such as email alerts to administrators.
 -   [ ] This solution provides a managed and automated way to prevent KMS key deletion and notify administrators.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Config rules are for evaluating the configuration of AWS resources, not for taking actions to prevent operations. It cannot "cancel" a KMS key deletion.
 -   [ ] B. Using a Lambda function and CloudWatch alarm adds complexity and requires more custom code and management than using Systems Manager Automation.
@@ -1443,7 +1443,7 @@ Why this is the correct answer:
 -   [ ] EventBridge can trigger Lambda functions in response to events or on a schedule, enabling on-demand report generation.
 -   [ ] Lambda's scalability ensures that reports are generated quickly, even with a high volume of requests.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. EC2 On-Demand Instances are more expensive than Lambda for short-lived, infrequent tasks. Running instances continuously for a week is not cost-effective.
 -   [ ] C. Amazon ECS is suitable for long-running applications or microservices, not for short, on-demand tasks like report generation. It also involves more overhead than Lambda.
@@ -1475,7 +1475,7 @@ Why these are the correct answers:
 -   [ ] Amazon FSx for Lustre is a high-performance file system optimized for HPC workloads. It provides fast access to data with scratch storage, which is ideal for temporary data used in HPC simulations.
 -   [ ] Elastic Fabric Adapter (EFA) is a network interface for EC2 instances that enables low-latency, high-bandwidth communication necessary for tightly coupled HPC applications.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. AWS Global Accelerator improves the performance of global applications by routing traffic through the AWS global network, but it is not specifically designed for the low-latency, high-bandwidth requirements of tightly coupled HPC environments.
 -   [ ] C. Amazon CloudFront is a content delivery network (CDN) used for caching and distributing content to end users, not for optimizing networking within an HPC cluster.
@@ -1505,7 +1505,7 @@ Why this is the correct answer:
 -   [ ] Amazon Rekognition provides pre-trained image analysis capabilities, including the detection of inappropriate content, without requiring you to train your own ML model.
 -   [ ] AWS Lambda allows you to run code in response to events, such as photo uploads, and Lambda function URLs provide a simple way to invoke Lambda functions over HTTP(S).
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Amazon SageMaker Autopilot is used for automating the building, training, and tuning of ML models, which is explicitly stated as not being required.
 -   [ ] C. Amazon Comprehend is a natural language processing (NLP) service for analyzing text, not images.
@@ -1535,7 +1535,7 @@ Why this is the correct answer:
 -   [ ] AWS allows you to register multiple MFA devices for a single user, including the root user.
 -   [ ] This provides redundancy in case one device is lost or becomes unavailable.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Relying on a backup administrator account is less secure than using MFA. It also does not address the best practice of securing the root user.
 -   [ ] C. Creating a new administrator account after losing access is a reactive approach and can lead to delays in accessing critical resources. It also does not follow security best practices.
@@ -1566,7 +1566,7 @@ Why this is the correct answer:
 -   [ ] It provides a scalable and loosely coupled architecture, making it easy to add or remove partners.
 -   [ ] SNS simplifies the process of notifying partners in real-time with minimal implementation effort.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] A. Using Amazon Timestream and Lambda adds complexity and overhead. It requires managing a database and writing code to iterate through partners and send notifications.
 -   [ ] C. AWS Step Functions is designed for orchestrating complex workflows, not for simple pub/sub notifications. Creating a task for each partner is inefficient and not scalable.
@@ -1597,7 +1597,7 @@ Why this is the correct answer:
 -   [ ] Amazon Comprehend can extract entities like ingredient names from text without requiring machine learning expertise.
 -   [ ] Lambda provides a cost-effective way to process each file, and storing the output in DynamoDB allows the web application to access it.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ] B. Amazon Forecast is used for time-series forecasting, not for extracting entities from text.
 -   [ ] C. Using Amazon Polly to convert text to speech and having employees listen to the audio is inefficient, costly, and does not leverage automation.
@@ -1636,7 +1636,7 @@ Why this is the correct answer:
 -   [ ]
     VPC peering is generally cost-effective for accessing resources across accounts.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 -   [ ]
     A. Creating a new EFS file system and copying data with DataSync adds complexity and cost for data transfer and storage. It is not the most cost-effective way to share an existing EFS file system.
